[metadata]
name = qinglong-openapi
version = 0.0.1
author = todrfu
author_email = todrfu@gmail.com
description = 青龙面板api SDK (修复port参数bug)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/todrfu/qinglong-api
project_urls =
    Bug Tracker = https://github.com/todrfu/qinglong-api/issues
    Original Project = https://github.com/yuxian158/qinglong-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    
[options.packages.find]
where = src
